@@ -6,37 +6,38 @@ import me.leoner.jmelody.bot.command.AbstractCommand;
 import me.leoner.jmelody.bot.command.CommandContext;
 import me.leoner.jmelody.bot.exception.BaseException;
 import me.leoner.jmelody.bot.manager.GuildPlayerManager;
+import net.dv8tion.jda.api.interactions.commands.OptionType;
 import net.dv8tion.jda.api.interactions.commands.build.OptionData;
 
-import java.util.Collections;
 import java.util.List;
 
-public class StopCommand extends AbstractCommand {
+public class BassCommand extends AbstractCommand {
 
     @Override
     public String getAlias() {
-        return "stop";
+        return "bass";
     }
 
     @Override
     public String getName() {
-        return "Stop Command";
+        return "Change bass level";
     }
 
     @Override
     public String getDescription() {
-        return "Stops the song currently playing, clears the music queue and disconnects from the voice channel.";
+        return "Change bass level";
     }
 
     @Override
     public List<OptionData> getOptions() {
-        return Collections.emptyList();
+        return List.of(new OptionData(OptionType.INTEGER, "level", "Bass level", true));
     }
 
     @Override
     public String handle(CommandContext context, ButtonInteractionEnum button) throws BaseException {
         final GuildPlayerManager manager = PlayerManager.getGuildPlayerManager(context.getGuild());
-        manager.stop();
-        return "**stopped** the player and all songs have been removed from the queue.";
+        Integer bass = context.getValueParamByKey("level");
+        manager.setBass(bass);
+        return "**changed** bass to **`" + bass + "%`**";
     }
 }
